<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp"
        android:layout_below="@id/toolbar">

        <ImageView
            android:id="@+id/quiz_light"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="centerInside"
            android:src="@drawable/question" />

        <TextView
            android:id="@+id/first_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quiz_light"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:fontFamily="serif"
            android:textSize="18sp"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/third_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_text"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:text="@string/tv_description"
            android:fontFamily="serif"
            android:textSize="25sp" />

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/third_text"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_tests"
            android:text="@string/yes"
            android:fontFamily="serif"/>

        <Button
            android:id="@+id/btn_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_yes"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_tests"
            android:text="@string/no"
            android:fontFamily="serif"/>

    </RelativeLayout>

</RelativeLayout>