<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_field"
            android:hint="@string/name_field"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/surname_field"
            android:hint="@string/surname_field"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_field"
            android:hint="@string/email_field"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password_field"
            android:hint="@string/password_field"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="20sp"

            app:met_floatingLabel="highlight"
            app:met_singleLineEllipsis="true"
            app:met_baseColor="#0056d3"
            app:met_primaryColor="#982360"/>


    </LinearLayout>

</androidx.cardview.widget.CardView>